--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <!-- Background image of Home page -->
       <div class="game-area">
-        <a href="index.html"> <img src="./assets/images/background-intro.png" alt="background-intro"> </a>
+        <a href="index.html"> <img src="./assets/images/Background-intro.svg" alt="background-intro"> </a>
       </div>
      
 
